# encgrid

./: .gitignore  CMakeLists.txt  README.md
encgrid/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  encgrid  geodesy.cpp  geodesy.h  gridinterp.cpp  gridinterp.h  main.cpp  notes_on_encgrid.txt
encgrid.xcodeproj/: project.pbxproj
encgrid.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
encgrid.xcodeproj/xcuserdata/vschmidt.xcuserdatad/xcschemes/: encgrid.xcscheme  xcschememanagement.plist
example/ENC-ROOT/US5NH02M/: US5NH02A.TXT  US5NH02B.TXT  US5NH02C.TXT  US5NH02D.TXT  US5NH02E.TXT  US5NH02F.TXT  US5NH02G.TXT  US5NH02M.000
example/US5NH02M/: depth.dbf  depth.shx  outline.dbf  outline.shp  outline.shx  point.dbf  point.shp  point.shx  polygon.dbf  polygon.shx
lib_geometry/: CMakeLists.txt  CurrentField.h.bak  GeomUtils.cpp  cmake_install.cmake
lib_mbutil/: cmake_install.cmake
